--- a/intex.html
+++ b/intex.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Wellcome to our website</h1>
-    <h2>hello world</h2>
-    <h3>my name is imran and your name      </h3>
+    <h1>Hello hellcome to my website</h1>
+    <h2>I am software programer and good person</h2>
 </body>
 </html>
