--- a/intex.html
+++ b/intex.html
@@ -21,5 +21,9 @@
     <h2>Enter your name</h2>
     <p>hello world</p>
 
+    <button>best button</button>
+
+    <marquee behavior="1500s" direction="1500s">this is my website</marquee>
+
 </body>
 </html>
