--- a/intex.html
+++ b/intex.html
@@ -20,6 +20,8 @@
     <input type="text">
     <h2>Enter your name</h2>
     <p>hello world</p>
+    <p>hello World</p>
+    <h1>new world</h1>
 
 </body>
 </html>
